--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./styles.css">
+  <!-- Font - need to make sure it is referencing downloaded font -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Bento grid</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,7 +20,7 @@
   </style>
 </head>
 <body>
-<div>
+<div class="item 1">
   <h1>Social Media</h1>
   <!-- What is span? -->
    <span>10x</span>
@@ -25,7 +30,7 @@
      <p>Over 4,000 5-star reviews</p>
 </div>
 
-<div>
+<div class="item 2">
   <h1>Create and schedule content quicker.</h1>
   <!-- Quicker is purple and italized, need to include alt on every picture -->
    <img src="illustration-create-post.png">
@@ -36,29 +41,29 @@
   <img src="illustration-ai-content.webp">
 </div>
 
-<div>
+<div class="item 3">
   <img src="illustration-multiple-platforms.webp">
   <h2>Manage multiple accounts and platforms.</h2> 
 </div>
 
-<div>
+<div class="item 4">
   <h1>>56%</h1>
   <!-- Span? -->
   <span>faster audience growth</span>
   <img src="illustration-audience-growth.webp">
 </div>
 
-<div>
+<div class="item 5">
   <h2>Maintain a consistent posting schedule.</h2>
   <img src="illustration-consistent-schedule.webp">
 </div>
 
-<div>
+<div class="item 6">
     <h2>Grow followers with non-stop content.</h2>
   <img src="illustration-grow-followers.webp">
   </div>
   
-<div>
+<div class="item 7">
   <h2>Schedule to social media.</h2>
   <img src="illustration-schedule-posts.webp">
   <p>Optimize post timings to publish content at the perfect time for your audience.</p>
