--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-<div class="item 1">
+<div class="item">
   <h1>Social Media</h1>
   <!-- What is span? -->
    <span>10x</span>
@@ -30,7 +30,7 @@
      <p>Over 4,000 5-star reviews</p>
 </div>
 
-<div class="item 2">
+<div class="item">
   <h1>Create and schedule content quicker.</h1>
   <!-- Quicker is purple and italized, need to include alt on every picture -->
    <img src="illustration-create-post.png">
@@ -41,29 +41,29 @@
   <img src="illustration-ai-content.webp">
 </div>
 
-<div class="item 3">
+<div class="item">
   <img src="illustration-multiple-platforms.webp">
   <h2>Manage multiple accounts and platforms.</h2> 
 </div>
 
-<div class="item 4">
+<div class="item">
   <h1>>56%</h1>
   <!-- Span? -->
   <span>faster audience growth</span>
   <img src="illustration-audience-growth.webp">
 </div>
 
-<div class="item 5">
+<div class="item">
   <h2>Maintain a consistent posting schedule.</h2>
   <img src="illustration-consistent-schedule.webp">
 </div>
 
-<div class="item 6">
+<div class="item">
     <h2>Grow followers with non-stop content.</h2>
   <img src="illustration-grow-followers.webp">
   </div>
   
-<div class="item 7">
+<div class="item">
   <h2>Schedule to social media.</h2>
   <img src="illustration-schedule-posts.webp">
   <p>Optimize post timings to publish content at the perfect time for your audience.</p>
